# rust_brain

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/rb-ai/: Cargo.toml
crates/rb-ai-bio/: Cargo.toml
crates/rb-ai-bio/src/: lib.rs  module_derived.rs  project_state.rs
crates/rb-ai/src/: error.rs  lib.rs  subprocess.rs
crates/rb-ai/src/agent_loop/: execute.rs  mod.rs  perceive.rs  reason.rs  record.rs  types.rs
crates/rb-ai/src/config/: keyring.rs  mod.rs
crates/rb-ai/src/memory/: crystallize.rs  layers.rs  mod.rs  recall.rs  store.rs
crates/rb-ai/src/orchestrator/: mod.rs  plan_card.rs  prompt.rs  snapshot.rs
crates/rb-ai/src/orchestrator/prompts/: system_en.md  system_zh.md
crates/rb-ai/src/provider/: anthropic.rs  mod.rs  ollama.rs  openai_compat.rs
crates/rb-ai/src/sandbox/: mod.rs  net.rs  pixi.rs  policy.rs
crates/rb-ai/src/session/: message.rs  mod.rs  store.rs
crates/rb-ai/src/tools/: builtin.rs  mod.rs  module_derived.rs  schema.rs  skill.rs  stubs.rs
crates/rb-ai/src/tools/builtin/: ask_user.rs  code_run.rs  file.rs  memory_tools.rs  mod.rs  project_state.rs  web.rs
crates/rb-ai/tests/: agent_session_e2e.rs  orchestrator_turn.rs  provider_openai_compat.rs
crates/rb-app/: Cargo.toml  tauri.conf.json
crates/rb-app/icons/: .gitignore  icon.icns
crates/rb-app/plugins/: rustqc.toml
crates/rb-app/src/: agent_runtime.rs  ai_state.rs  main.rs  rnaseq_pipeline.rs  state.rs
crates/rb-app/src/commands/: agent.rs  ai_provider.rs  assets.rs  chat.rs  files.rs  inputs.rs  mod.rs  modules.rs  plugins.rs  project.rs  samples.rs  settings.rs
crates/rb-app/tests/: utilities_integration.rs
crates/rb-bam-tools/: Cargo.toml
crates/rb-bam-tools/src/: commands.rs  error.rs  extract.rs  index.rs  lib.rs
crates/rb-core/: Cargo.toml
crates/rb-core/src/: asset.rs  binary.rs  cancel.rs  config.rs  input.rs  lib.rs  module.rs  project.rs  run_event.rs  runner.rs  sample.rs  subprocess.rs
crates/rb-core/tests/: project_test.rs  runner_test.rs
crates/rb-deseq2/: Cargo.toml
crates/rb-deseq2/src/: lib.rs
crates/rb-expr-norm/: Cargo.toml
crates/rb-expr-norm/src/: lib.rs  normalize.rs
crates/rb-fastq-viewer/: Cargo.toml
crates/rb-fastq-viewer/src/: commands.rs  error.rs  index.rs  lib.rs  session.rs
crates/rb-fastq-viewer/testdata/: larger.fastq  tiny.fastq
crates/rb-gene-length/: Cargo.toml
crates/rb-gene-length/src/: gtf.rs  lib.rs
crates/rb-genome-viewer/: Cargo.toml
crates/rb-genome-viewer/src/: bgzip.rs  commands.rs  error.rs  index.rs  lib.rs  reference.rs  search.rs  session.rs  tracks.rs
crates/rb-genome-viewer/testdata/: tiny.bed  tiny.fa  tiny.fa.fai  tiny.gff3  tiny.gtf
crates/rb-gff-convert/: Cargo.toml
crates/rb-gff-convert/src/: lib.rs  subprocess.rs
crates/rb-gff-convert/tests/: cancel.rs  integration_smoke.rs
crates/rb-gff-convert/tests/data/: anno.gff3
crates/rb-plugin/: Cargo.toml
crates/rb-plugin/src/: argv.rs  lib.rs  loader.rs  manifest.rs  module.rs  schema.rs  subprocess.rs  validate.rs
crates/rb-plugin/tests/: manifest_parse.rs  run_smoke.rs
crates/rb-plugin/tests/data/: echo_plugin.toml
crates/rb-qc/: Cargo.toml
crates/rb-qc/src/: lib.rs
crates/rb-rustqc/: Cargo.toml
crates/rb-rustqc/src/: lib.rs
crates/rb-star-align/: Cargo.toml  README.md
crates/rb-star-align/src/: counts.rs  lib.rs  log_final.rs  subprocess.rs
crates/rb-star-align/tests/: integration_smoke.rs
crates/rb-star-align/tests/data/: anno.gtf  chr.fa  reads.fq
crates/rb-star-align/tests/fixtures/: Log.final.out  ReadsPerGene.sample1.out.tab  ReadsPerGene.sample2.out.tab
crates/rb-star-index/: Cargo.toml
crates/rb-star-index/src/: lib.rs  subprocess.rs
crates/rb-star-index/tests/: cancel.rs
crates/rb-trimming/: Cargo.toml
crates/rb-trimming/src/: lib.rs
docs/: ai-chat-smoke.md  fastqc-report.schema.json
docs/superpowers/plans/: 2026-04-12-rustbrain-mvp.md  2026-04-18-frontend-i18n.md  2026-04-18-gff-convert.md  2026-04-18-star-quantification.md  2026-04-19-ai-chat-mode.md  2026-04-21-third-party-tool-plugins.md  2026-04-23-utilities-genome-viewer.md  2026-04-24-project-inputs-p1.md  2026-05-06-self-evolving-agent-app-ui.md  2026-05-06-self-evolving-agent-core.md
docs/superpowers/smoke/: 2026-04-21-rustqc-plugin-smoke.md
docs/superpowers/specs/: 2026-04-12-rustbrain-mvp-design.md  2026-04-18-app-icon-design.md  2026-04-18-frontend-i18n-design.md  2026-04-18-gff-convert-design.md  2026-04-18-star-quantification-design.md  2026-04-19-ai-chat-mode-design.md  2026-04-19-frontend-modularization-design.md  2026-04-21-third-party-tool-plugins-design.md  2026-04-23-utilities-genome-viewer-design.md  2026-04-24-project-asset-management-design.md  2026-05-06-self-evolving-agent-design.md
frontend/: index.html
frontend/css/: agent.css  base.css  chat.css  components.css  layout.css  module-view.css  motion.css  responsive.css  style.css
frontend/css/views/: bam-tools.css  dashboard.css  fastq-viewer.css  inputs.css  samples.css  settings.css  tasks.css
frontend/js/: app.js  i18n.js  main.js
frontend/js/api/: assets.js  binary.js  chat.js  files.js  inputs.js  modules.js  plugins.js  project.js  samples.js
frontend/js/core/: actions.js  constants.js  echarts-theme.js  events.js  font-size.js  i18n-helpers.js  router.js  run-controls.js  runtime.js  state.js  tauri.js
frontend/js/i18n/: en.js  zh.js
frontend/js/modules/: module-header.js  run-result.js
frontend/js/modules/agent/: api.js  approval-card.js  full-permission.js  left-pane.js  middle-pane.js  right-pane.js  state.js  view.js
frontend/js/modules/assets/: view.js
frontend/js/modules/chat/: chat-view.js  message-stream.js  plan-card.js  run-card.js  schema-form.js  session-list.js
frontend/js/modules/counts-merge/: result.js  view.js
frontend/js/modules/dashboard/: project.js  view.js
frontend/js/ui/: collapsible.js  coming-soon.js  custom-plot.js  escape.js  export-tsv.js  file-drop.js  log-panel.js  modal.js  project-new-modal.js  prompt-modal.js  registry-picker.js
(+57 files in other folders)
