[workspace]
resolver = "2"
members = [
    "crates/rb-core",
    "crates/rb-ai",
    "crates/rb-app",
    "crates/rb-deseq2",
    "crates/rb-gff-convert",
    "crates/rb-plugin",
    "crates/rb-qc",
    "crates/rb-star-align",
    "crates/rb-star-index",
    "crates/rb-trimming",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
directories = "5"
which = "6"
toml = "0.8"
include_dir = "0.7"
glob = "0.3"
shlex = "1"
