[package]
name = "rb-ai"
version = "0.3.0"
edition = "2021"

[features]
default = []
anthropic = []
ollama-native = []

[dependencies]
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "fs", "process"] }
tokio-util = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
eventsource-stream = "0.2"
url = "2"
keyring = "2"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
dirs = "5"
jsonschema = "0.18"
tracing = "0.1"
path-clean = "1"
fs2 = "0.4"
which = "6"
serde_yaml = "0.9"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
