[package]
name = "rb-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rb-core = { path = "../rb-core" }
rb-deseq2 = { path = "../rb-deseq2" }
rb-qc = { path = "../rb-qc" }
rb-trimming = { path = "../rb-trimming" }
rb-star-index = { path = "../rb-star-index" }
rb-star-align = { path = "../rb-star-align" }
rfd = "0.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }
