[package]
name = "rb-app"
version = "0.5.2"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rb-core = { path = "../rb-core" }
rb-ai = { path = "../rb-ai" }
rb-deseq2 = { path = "../rb-deseq2" }
rb-gff-convert = { path = "../rb-gff-convert" }
rb-qc = { path = "../rb-qc" }
rb-rustqc = { path = "../rb-rustqc" }
rb-trimming = { path = "../rb-trimming" }
rb-star-index = { path = "../rb-star-index" }
rb-star-align = { path = "../rb-star-align" }
rb-plugin = { path = "../rb-plugin" }
async-trait.workspace = true
directories.workspace = true
include_dir.workspace = true
rfd = "0.15"
dirs = "5"
futures-util = "0.3"
tracing = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
