[package]
name = "rb-app"
version = "0.3.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rb-core = { path = "../rb-core" }
chrono.workspace = true
rb-ai = { path = "../rb-ai" }
rb-ai-bio = { path = "../rb-ai-bio" }
rb-deseq2 = { path = "../rb-deseq2" }
rb-expr-norm = { path = "../rb-expr-norm" }
rb-fastq-viewer = { path = "../rb-fastq-viewer" }
rb-bam-tools = { path = "../rb-bam-tools" }
rb-gene-length = { path = "../rb-gene-length" }
rb-genome-viewer = { path = "../rb-genome-viewer" }
rb-gff-convert = { path = "../rb-gff-convert" }
rb-qc = { path = "../rb-qc" }
rb-rustqc = { path = "../rb-rustqc" }
rb-trimming = { path = "../rb-trimming" }
rb-star-index = { path = "../rb-star-index" }
rb-star-align = { path = "../rb-star-align" }
rb-plugin = { path = "../rb-plugin" }
async-trait.workspace = true
directories.workspace = true
include_dir.workspace = true
rfd = "0.15"
dirs = "5"
futures-util = "0.3"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
