[package]
name = "rb-bam-tools"
version = "0.3.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
noodles-bam.workspace = true
noodles-sam.workspace = true
noodles-bgzf.workspace = true
noodles-core.workspace = true
noodles-csi.workspace = true
tauri = "2"

[dev-dependencies]
tempfile = "3"
