[package]
name = "rb-core"
version = "0.3.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
directories.workspace = true
which.workspace = true

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
