[package]
name = "rb-fastq-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
bincode.workspace = true
sha1.workspace = true
noodles-fastq.workspace = true
dirs = "5"
tauri = "2"

[dev-dependencies]
tempfile = "3"
