[package]
name = "rb-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
rb-core = { path = "../rb-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
toml.workspace = true
glob.workspace = true
shlex.workspace = true
include_dir.workspace = true
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
