[package]
name = "rb-star-index"
version = "0.3.0"
edition = "2021"

[dependencies]
rb-core = { path = "../rb-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
